--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Shake animation for error feedback: -5dp → 5dp → -5dp → 5dp → 0dp -->
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="500"
+    android:duration="250"
     android:fromXDelta="0"
     android:interpolator="@android:anim/cycle_interpolator"
-    android:repeatCount="3"
-    android:toXDelta="10dp" />
+    android:repeatCount="4"
+    android:toXDelta="5dp" />
