--- a/app/src/main/res/drawable/bg_auth_gradient.xml
+++ b/app/src/main/res/drawable/bg_auth_gradient.xml
@@ -3,7 +3,7 @@
     <gradient
         android:type="linear"
         android:angle="135"
-        android:startColor="#F9FAEF"
-        android:centerColor="#E8F5E9"
-        android:endColor="#C8E6C9" />
+        android:startColor="@color/auth_gradient_start"
+        android:centerColor="@color/auth_gradient_center"
+        android:endColor="@color/auth_gradient_end" />
 </shape>
