--- a/app/src/main/res/layout/chat_bubble_video.xml
+++ b/app/src/main/res/layout/chat_bubble_video.xml
@@ -1,17 +1,21 @@
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content">
 	<LinearLayout
 		android:id="@+id/body"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:paddingLeft="8dp"
 		android:paddingRight="8dp"
-		android:orientation="horizontal">
+		android:orientation="horizontal"
+		app:layout_constraintWidth_max="wrap"
+		app:layout_constraintWidth_percent="0.75"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent">
 		<androidx.cardview.widget.CardView
 			android:id="@+id/mProfileCard"
 			android:layout_width="34dp"
@@ -29,14 +33,11 @@
 				android:src="@drawable/avatar"
 				android:scaleType="centerCrop" />
 		</androidx.cardview.widget.CardView>
-		<FrameLayout
+		<LinearLayout
 			android:id="@+id/message_layout"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
-			<LinearLayout
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:orientation="vertical">
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
 			<LinearLayout
 				android:id="@+id/messageBG"
 				android:layout_width="wrap_content"
@@ -370,7 +371,6 @@
 						android:scaleType="centerInside" />
 				</LinearLayout>
 			</LinearLayout>
-			</LinearLayout>
-		</FrameLayout>
+		</LinearLayout>
 	</LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
