--- a/app/src/main/res/layout/message_input_layout.xml
+++ b/app/src/main/res/layout/message_input_layout.xml
@@ -10,6 +10,16 @@
         android:background="@android:color/transparent"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="horizontal">
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_attachments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="12dp"
+                android:gravity="center_horizontal|center_vertical"
+                android:textSize="@dimen/text_size_small"
+                style="?attr/materialIconButtonFilledStyle"
+                app:icon="@drawable/icons_2"
+                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Medium" />
         <LinearLayout
                 android:id="@+id/message_input_outlined_round"
                 android:layout_width="0dp"
@@ -21,7 +31,7 @@
                 android:layout_weight="1">
                 <com.synapse.social.studioasinc.FadeEditText
                         android:id="@+id/message_et"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="7dp"
                         android:padding="@dimen/spacing_normal"
@@ -31,40 +41,7 @@
                         android:textColor="@color/md_theme_onBackground"
                         android:hint="@string/write_message"
                         android:textColorHint="@color/hint_text_color"
-                        android:layout_weight="1"
                         android:maxHeight="180dp" />
-                <LinearLayout
-                        android:id="@+id/toolContainer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="22dp"
-                        android:paddingTop="12dp"
-                        android:paddingRight="22dp"
-                        android:paddingBottom="12dp"
-                        android:background="@drawable/bg_tool_container"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:elevation="1dp">
-                        <ImageView
-                                android:id="@+id/btn_voice_message"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:src="@drawable/ic_call_48px"
-                                android:scaleType="fitCenter" />
-                                        <View
-                                                android:id="@+id/divider_mic_camera"
-                                android:layout_width="1dp"
-                                android:layout_height="20dp"
-                                android:layout_marginLeft="18dp"
-                                android:layout_marginRight="18dp"
-                                                android:background="@color/md_theme_outlineVariant" />
-                        <ImageView
-                                android:id="@+id/galleryBtn"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:src="@drawable/icons_2"
-                                android:scaleType="fitCenter" />
-                </LinearLayout>
         </LinearLayout>
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_sendMessage"
