--- a/app/src/main/res/layout/chat_bubble_video.xml
+++ b/app/src/main/res/layout/chat_bubble_video.xml
@@ -16,6 +16,16 @@
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent">
+		<!-- Selection checkbox for multi-select mode -->
+		<CheckBox
+			android:id="@+id/selection_checkbox"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginStart="8dp"
+			android:layout_marginEnd="8dp"
+			android:layout_gravity="center_vertical"
+			android:visibility="gone"
+			style="@style/Widget.Material3.CompoundButton.CheckBox" />
 		<androidx.cardview.widget.CardView
 			android:id="@+id/mProfileCard"
 			android:layout_width="34dp"
@@ -38,21 +48,32 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:orientation="vertical">
-			<LinearLayout
-				android:id="@+id/messageBG"
+			<FrameLayout
 				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-			android:layout_marginLeft="0dp"
-			android:layout_marginRight="0dp"
-				android:layout_marginBottom="2dp"
-				android:paddingLeft="4dp"
-				android:paddingTop="4dp"
-				android:paddingRight="4dp"
-				android:paddingBottom="8dp"
-				android:background="@android:color/transparent"
-				android:clickable="false"
-				android:focusable="false"
-				android:orientation="vertical">
+				android:layout_height="wrap_content">
+				<!-- Selection overlay -->
+				<View
+					android:id="@+id/selection_overlay"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:background="?attr/colorPrimaryContainer"
+					android:alpha="0.1"
+					android:visibility="gone" />
+				<LinearLayout
+					android:id="@+id/messageBG"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginLeft="0dp"
+					android:layout_marginRight="0dp"
+					android:layout_marginBottom="2dp"
+					android:paddingLeft="4dp"
+					android:paddingTop="4dp"
+					android:paddingRight="4dp"
+					android:paddingBottom="8dp"
+					android:background="@android:color/transparent"
+					android:clickable="false"
+					android:focusable="false"
+					android:orientation="vertical">
 				<!-- Username for group chats -->
 				<TextView
 					android:id="@+id/senderUsername"
@@ -371,6 +392,7 @@
 						android:scaleType="centerInside" />
 				</LinearLayout>
 			</LinearLayout>
+			</FrameLayout>
 		</LinearLayout>
 	</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
