--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,9 @@
-<LinearLayout
+<FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:layout_height="match_parent">
 	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
 		android:id="@+id/swipeLayout"
 		android:layout_width="match_parent"
@@ -40,13 +39,13 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:padding="8dp"
-		android:gravity="center_horizontal|center_vertical"
-		android:orientation="horizontal">
+		android:gravity="center"
+		android:orientation="horizontal"
+		android:visibility="gone">
 		<ProgressBar
 			android:id="@+id/loading_bar"
 			android:layout_width="48dp"
 			android:layout_height="48dp"
-			android:indeterminate="false"
 			style="?android:progressBarStyle" />
 	</LinearLayout>
-</LinearLayout>
+</FrameLayout>
