fix: Update PostCommentsBottomSheetDialogStyle to use Material3 theme
Changed parent from Theme.AppCompat.Light.Dialog to Theme.Material3.Light.Dialog
to fix MaterialButton inflation crash requiring MaterialComponents theme

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -84,7 +84,7 @@
     </style>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.Material3.Light">
     </style>
-    <style name="PostCommentsBottomSheetDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+    <style name="PostCommentsBottomSheetDialogStyle" parent="Theme.Material3.Light.Dialog">
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:backgroundDimEnabled">true</item>
